p2/app-three-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three

spec:
  replicas: 1
  selector:
    matchLabels:
      app: three
  template:
    metadata:
      labels:
        app: three
    spec:
      containers:
        - name: app-three-container
          image: traefik/whoami:v1.8.0
          ports:
            - containerPort: 80
              name: app-three-port

---

apiVersion: v1
kind: Service
metadata:
  name: app-three-svc
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: app-three-port
  selector:
    app: three
