p2/app-two-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two

spec:
  replicas: 3
  selector:
    matchLabels:
      app: two
  template:
    metadata:
      labels:
        app: two
    spec:
      containers:
        - name: app-two-container
          image: traefik/whoami:v1.8.0
          ports:
            - containerPort: 80
              name : app-two-port

---

apiVersion: v1
kind: Service
metadata:
  name: app-two-svc
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: app-two-port
      protocol: TCP
  selector:
    app: two
