p2/ingress-controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: "app1.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-one-svc
                port:
                  number: 80

    - host: "app2.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-two-svc
                port:
                  number: 80
                  
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-three-svc
                port:
                  number: 80
